syntax = "proto3";

package rivet.backend.pkg.party.msg.invite_create;

import "proto/common.proto";
import "proto/backend/net.proto";

/// name = "msg-party-invite-create"
/// parameters = [
/// 	{ name = "party_id" },
/// 	{ name = "invite_id" },
/// ]
message Message {
	rivet.common.Uuid party_id = 1;
	rivet.common.Uuid invite_id = 2;
	rivet.backend.net.ClientInfo client = 3;
	optional Alias alias = 4;
	bool preemptive_party = 5;
}

message Alias {
	rivet.common.Uuid namespace_id = 1;
	string alias = 2;
}

